--- a/index.html
+++ b/index.html
@@ -4,11 +4,12 @@
   <meta charset="UTF-8">
   <link rel="stylesheet" type="text/css" href="css/preset/preset.css">
   <!-- Put CSS Link here!-->
+  <link rel="stylesheet" type="text/css" href="css/style.css">
   <title>CSS Practice</title>
 </head>
 <body>
 	<div id="title-section">
-    <h1>The Ultimate CSS Walkthrough</h1>
+    <h1 class="anExampleClass">The Ultimate CSS Walkthrough</h1>
     <h2>An Introduction to Cascading Style Sheets</h2>
   </div>
   <hr>
